<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hekla Punch</string>
    <string name="hello_world">Hér koma smá upplýsingar um appið seinna meir ásamt leiðbeiningum.</string>
    <string name="menu_settings">Settings</string>
    <string name="keppandi">Keppa</string>
    <string name="keppa_efst">Keppa</string>
    <string name="organize_button">Umsjón</string>
    <string name="organize_efst">Umsjón</string>
    <string name="organize_new_track_button">Gera nýja braut</string>
    <string name="organize_manage_race">Stýra keppni</string>
    <string name="organize_receive_data_button">Sækja hlaup</string>
    <string name="organize_courses_button">Umsýsla brauta</string>
    <string name="organize_modify_data_button">Breyta braut</string>
    <string name="organize_modify_data_efst">Smíða braut</string>
    <string name="organize_new_track_title">Gera nýja braut</string>
    <string name="organize_receive_data_title">Taka á móti gögnum</string>
    <string name="organize_modify_data_title">Uppsettning brauta</string>
    <string name="organize_create_qr_read">Bæta við</string>
    <string name="organize_create_delete">Eyða</string>
    <string name="organize_create_default_name">Nafn brautar</string>
    <string name="organize_create_station_default_name">Nafn stöðvar (optional)</string>
    <string name="organize_create_spinner">Veldu braut</string>
    <string name="save">Vista</string>
    <string name="punch">Punch</string>
    <string name="senda_bluetooth">Senda gögn með Bluetooth</string>
    <string name="senda_json">Senda gögn í gegnum netið</string>
    <string name="delete_keppandi">Henda stöðvum</string>
    <string name="keppa_activity_title">Keppnishamur</string>
    <string name="title_activity_qr">QRActivity</string>
    <string name="title_activity_getdata">Stýra keppni</string>
    <string name="testqr_button">Prófa QR</string>
    <string name="title_activity_send">SendActivity</string>
    <string name="title_activity_send_json">Senda gögn á vefþjón</string>
    <string name="send_data">Senda Gögn með Bluetooth</string>
    <string name="title_activity_blue_tooth">Senda gögn með BlueTooth</string>
    <string name="saved_name">Nafn keppanda:</string>
    <string name="delete_result">Eyða gögnum</string>
    <string name="delete_course">Eyða braut</string>
    
        <!--  DeviceListActivity -->
    <string name="scanning">Leita að tækjum...</string>
    <string name="select_device">Veldu tæki</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">Engin tæki sýnileg</string>
    <string name="title_paired_devices">Þekkt tæki (treyst)</string>
    <string name="title_other_devices">Önnur þekkt tæki</string>
    <string name="button_scan">Leita að tækjum</string>

    <!-- Options Menu -->
    <string name="secure_connect">Tengjast tæki - Örugg tenging</string>
    <string name="insecure_connect">Tengjast tæki - Opin tenging</string>
    <string name="discoverable">Gera sýnilegt</string>
    <string name="main_test">Prufa QR kóða</string>
    
     <!-- keppa Menu -->
    <string name="keppa_senda">Senda hlaup</string>
    <string name="keppa_hlada">Hlaða upp gögnum</string>
    <string name="keppa_henda">Henda stöðvum</string>
    
    <!-- getdata Menu -->
    <string name="getdata_henda">Henda niðurstöðum</string>

    <string name="sending">Sendi gögn...</string>
    <string name="send">Senda</string>
    <string name="not_connected">Ekkert tæki er tengt</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">tengist...</string>
    <string name="title_connected_to">Tengt: </string>
    <string name="title_not_connected">ekki tengt</string>
    
</resources>
