<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:gravity="center"
        android:text="@string/organize_new_track_title"
        android:textSize="24sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:onClick="create"
        android:text="@string/organize_create_qr_read" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="200dip" >
    </ListView>
    <EditText android:id="@+id/editText1" android:layout_width="match_parent" android:layout_height="wrap_content" android:ems="10" android:hint="@string/organize_create_default_name">
        <requestFocus />
    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:onClick="create"
        android:text="@string/save" />

</LinearLayout>