<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:gravity="center"
        android:text="@string/organize_modify_data_efst"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextCourseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/organize_create_default_name"
        android:maxLength="30" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/modify_add"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="read_qr"
            android:text="@string/organize_create_qr_read" />

        <Button
            android:id="@+id/modify_delete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="deleteSelected"
            android:text="@string/organize_create_delete" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/Create_Scroll_View"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.46"
        android:fillViewport="true" >

        <TableLayout
            android:id="@+id/Create_Station_Table"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/Create_Save"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_weight="0.00"
        android:onClick="saveList"
        android:text="@string/save" />

</LinearLayout>