<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:gravity="center"
        android:text="@string/organize_efst"
        android:textSize="24sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:onClick="create"
        android:text="@string/organize_courses_button" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:onClick="receive"
        android:text="@string/organize_receive_data_button" />
     <ScrollView
        android:id="@+id/ScrollView_receive"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:fillViewport="true" >

        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/receive_table"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="20dip" >
        </TableLayout>
    </ScrollView>
      <Button
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:onClick="delete_results"
        android:text="@string/delete_result" />

</LinearLayout>