<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dip"
        android:text="@string/hello_world" 
        android:textColor="#FFFFFF"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:onClick="organize"
        android:text="@string/organize_button" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="4dp"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="20dip"
        android:background="@color/green" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:onClick="keppa"
        android:text="@string/keppandi" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:stretchColumns="1" >

        <TableRow android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saved_name"
                android:textSize="20sp"
                android:textStyle="normal"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/saved_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:maxWidth="150dip"
                android:minWidth="230dip"
                android:textColor="#FFFFFF" >
            </EditText>
        </TableRow>
    </TableLayout>

</LinearLayout>