<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:windowSoftInputMode="adjustResize" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:gravity="center"
        android:text="@string/keppa_efst"
        android:textSize="24sp" />
	
    <LinearLayout 
        android:focusable="true"
		android:focusableInTouchMode="true" 
		android:layout_width="match_parent"
		android:layout_height="50dip" >
    	<requestFocus />
    	
    	<Button
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:onClick="read_qr"
        android:text="@string/punch" >
    </Button>
	
	</LinearLayout>
    	
    <ScrollView
        android:id="@+id/ScrollView_keppa"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:fillViewport="true" >

        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/station_table"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="20dip" >
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/keppa_send"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:onClick="send_info"
        android:text="@string/senda_keppandi" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:onClick="delete"
        android:text="@string/delete_keppandi" />

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:stretchColumns="1" >

        <TableRow android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/saved_name" />

            <EditText
                android:id="@+id/saved_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_x="68dp"
                android:layout_y="40dip"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:maxWidth="150dip"
                android:minWidth="230dip"
             	android:focusable="true"
             	android:focusableInTouchMode="true" >
            </EditText>
        </TableRow>
    </TableLayout>

</LinearLayout>
</ScrollView>